--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://www.example.com/"
+baseURL: "https://joyful-blini-e0df9d.netlify.app/"
 theme: "up-business-theme"
 languageCode: "fr-fr"
 
