--- a/data/home/hero.yaml
+++ b/data/home/hero.yaml
@@ -2,7 +2,7 @@ enabled: true
 id: "hero"
 
 content:
-  title: "How to **level up** your business"
+  title: "How to **level up** your workflow"
   text: "Je conçois des Web app robustes et évolutives qui éliminent les problèmes chronophages paralysant vos équipes, leur donnant l'espace et la liberté nécessaires pour se consacrer pleinement à vos priorités stratégiques."
 
   buttonPrimary:
